--- a/myapp/templates/myapp/insertion_pr_table.html
+++ b/myapp/templates/myapp/insertion_pr_table.html
@@ -239,89 +239,103 @@
                   </i>
               </div>
             </th>
+            <th>
+              <span>
+                Action
+              </span>
+            </th>
           </tr>
         </thead>
         <tbody>
-          <tr class="click-row" data-href="{% url 'app_view' 0 %}">
-            <td><strong>1</strong></td>
+          <tr >
+            <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>1</strong></td>
             <td>Subvention à TDA pour l’acquisition de 280 réémetteurs FM , d’un pylône de 100 mètre et 25 pylônes de 32 mètres </td>
             <td>  NF5.751.2.262.035.24</td>
             <td> 1 140 000 </td>
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
+            <td id="edi"><i class="fas fa-edit"></i></td>
           </tr>
-          <tr class="click-row" data-href="{% url 'app_view' 0 %}">
-            <td><strong>2</strong></td>
+          <tr >
+            <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>2</strong></td>
             <td>Subvention à TDA pour l’acquisition de 280 réémetteurs FM , d’un pylône de 100 mètre et 25 pylônes de 32 mètres </td>
             <td>  NF5.751.2.262.035.24</td>
             <td> 1 140 000 </td>
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
+            <td id="edi"><i class="fas fa-edit"></i></td>
           </tr>
-          <tr class="click-row" data-href="{% url 'app_view' 0 %}">
-            <td><strong>2</strong></td>
+          <tr >
+            <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>2</strong></td>
             <td>Subvention à TDA pour l’acquisition de 280 réémetteurs FM , d’un pylône de 100 mètre et 25 pylônes de 32 mètres </td>
             <td>  NF5.751.2.262.035.24</td>
             <td> 1 140 000 </td>
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
+            <td id="edi"><i class="fas fa-edit"></i></td>
           </tr>
-          <tr class="click-row" data-href="{% url 'app_view' 0 %}">
-            <td><strong>4</strong></td>
+          <tr >
+            <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>4</strong></td>
             <td>Subvention à TDA pour l’acquisition de 280 réémetteurs FM , d’un pylône de 100 mètre et 25 pylônes de 32 mètres </td>
             <td>  NF5.751.2.262.035.24</td>
             <td> 1 140 000 </td>
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
+            <td id="edi"><i class="fas fa-edit"></i></td>
           </tr>         
-          <tr class="click-row" data-href="{% url 'app_view' 0 %}">
-            <td><strong>5</strong></td>
+          <tr >
+            <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>5</strong></td>
             <td>Subvention à TDA pour l’acquisition de 280 réémetteurs FM , d’un pylône de 100 mètre et 25 pylônes de 32 mètres </td>
             <td>  NF5.751.2.262.035.24</td>
             <td> 1 140 000 </td>
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
+            <td id="edi"><i class="fas fa-edit"></i></td>
           </tr>
-          <tr class="click-row" data-href="{% url 'app_view' 0 %}">
-            <td><strong>6</strong></td>
+          <tr >
+            <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>6</strong></td>
             <td>Subvention à TDA pour l’acquisition de 280 réémetteurs FM , d’un pylône de 100 mètre et 25 pylônes de 32 mètres </td>
             <td>  NF5.751.2.262.035.24</td>
             <td> 1 140 000 </td>
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
+            <td id="edi"><i class="fas fa-edit"></i></td>
           </tr>
-          <tr class="click-row" data-href="{% url 'app_view' 0 %}">
-            <td><strong>7</strong></td>
+          <tr >
+            <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>7</strong></td>
             <td>Subvention à TDA pour l’acquisition de 280 réémetteurs FM , d’un pylône de 100 mètre et 25 pylônes de 32 mètres </td>
             <td>  NF5.751.2.262.035.24</td>
             <td> 1 140 000 </td>
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
+            <td id="edi"><i class="fas fa-edit"></i></td>
           </tr>
-          <tr class="click-row" data-href="{% url 'app_view' 0 %}">
-            <td><strong>8</strong></td>
+          <tr >
+            <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>8</strong></td>
             <td>Subvention à TDA pour l’acquisition de 280 réémetteurs FM , d’un pylône de 100 mètre et 25 pylônes de 32 mètres </td>
             <td>  NF5.751.2.262.035.24</td>
             <td> 1 140 000 </td>
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
+            <td id="edi"><i class="fas fa-edit"></i></td>
           </tr>
-          <tr class="click-row" data-href="{% url 'app_view' 0 %}">
-            <td><strong>9</strong></td>
+          <tr >
+            <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>9</strong></td>
             <td>Subvention à TDA pour l’acquisition de 280 réémetteurs FM , d’un pylône de 100 mètre et 25 pylônes de 32 mètres </td>
             <td>  NF5.751.2.262.035.24</td>
             <td> 1 140 000 </td>
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
+            <td id="edi"><i class="fas fa-edit"></i></td>
           </tr>
           {% for projet in list_projet %}
           <tr class="click-row" data-href="{% url 'app_view' projet.id_project%}">
@@ -332,6 +346,7 @@
           <td>{{ projet.dp_cum }} </td>
           <td>{{ projet.PEC }}</td>
           <td>{{ projet.dp_prev }}</td>
+          <td id="edi"><i class="fas fa-edit"></i></td>
           </tr>
           {% endfor %}
         </tbody>
@@ -347,6 +362,18 @@
     </div>
 </body>
 <script type="text/javascript">
+  function cancel(i)
+{
+  var rows=$('#proj-table tbody tr').eq(i);
+          const cells = rows.children('td');
+                // Loop through cells and log their contents
+                cells.each(function(index) {
+                    console.log(`cancel ${index}: ${$(this).val()}`);
+                    var valu=$(this).text();
+                    $(this).empty()
+                  })
+
+}
   let startYear = 1800;
   let endYear = new Date().getFullYear();
   for (i = endYear; i > startYear; i--)
@@ -356,15 +383,58 @@
   </script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-  const rows = document.querySelectorAll("tr.click-row");
+  const rows = document.querySelectorAll("td.click-row");
   rows.forEach(row => {
       row.addEventListener("click", function() {
           const url = this.dataset.href;
           window.location.href = url;
       });
   });
-});
+})
+  document.addEventListener("DOMContentLoaded", function() {
+  const rowsedit = document.querySelectorAll("td#edi");
+  rowsedit.forEach((cell,indexr) => {
+    cell.addEventListener("click", function() {
+          var rows=$('#proj-table tbody tr').eq(indexr); 
+          const cells = rows.children('td');
+                // Loop through cells and log their contents
+                cells.each(function(index) {
+                    console.log(`Cell ${index}: ${$(this).text()}`);
 
+                    var valu=$(this).text();
+                    switch (true) {
+                      case index == 0:
+                      $(this).html('<input type="text" value="'+valu+'" id="editcell'+index+'" disabled />')
+                        break;
+                      case index == 3 || index == 4 || index == 5:
+                        var nowhite=valu.replace(/\s+/g, '');
+                        var inte=parseInt(nowhite);
+                      $(this).html('<input class="td-edit"  type="number" step="0.01" name="PEC" value="'+inte+'" id="editcell'+index+'" />')
+                        break;
+                        case index == 6 :
+                        $(this).html('<input class="td-edit" type="text" value="'+valu+'" id="editcell'+index+'" />')
+                          break;
+                        case index == 7 :
+                          console.log($(this).parent())
+                          $(this).attr('id', 'rowcancel');
+                        $(this).html('<button id="rowcancel'+indexr+'" onclick=cancel('+indexr+')><i class="fas fa-sign-out-alt"></i></button>')
+                          break;
+                      default:
+                      $(this).html('<input class="td-edit" type="text" value="'+valu+'" id="editcell'+index+'"  />')
+                        break;
+                    }
+                    /*if(index != 7)
+                    $(this).html('<input type="text" value="'+valu+'" id="editcell'+index+'" />')*/
+                });
+                
+      });
+  });
+});
+$(document).ready(function()  {
+  $('#rowcancel').on('click',function(){
+    alert('row cancel')
+  })
+})
 $(document).ready(function(){
 	function sortTable(table, col, reverse) {
     var rows = table.find('tbody > tr').get();
