--- a/myapp/static/myapp/css/main.css
+++ b/myapp/static/myapp/css/main.css
@@ -515,7 +515,7 @@ input.question:invalid ~ input[type="submit"], textarea.question:invalid ~ input
   }
   .btn-search{
     width: 50px;
-    height: 35px;
+    height: 50px;
     border-style: none;
     font-size: 20px;
     font-weight: bold;
@@ -542,5 +542,36 @@ input.question:invalid ~ input[type="submit"], textarea.question:invalid ~ input
     border-bottom:1px solid rgba(255,255,255,.5);
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
   }
-  
+  .act-handle
+  {
+    
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    flex-direction: row;
+
+  }
   /*-- end of css--*/
+
+/* -- button example CSS */
+.button-34 {
+  background: #5E5DF0;
+  border-radius: 999px;
+  box-shadow: #5E5DF0 0 10px 20px -10px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  opacity: 1;
+  outline: 0 solid transparent;
+  padding: 8px 18px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: fit-content;
+  word-break: break-word;
+  border: 0;
+}
