--- a/myapp/templates/myapp/insertion_pr_table.html
+++ b/myapp/templates/myapp/insertion_pr_table.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="{% static 'myapp/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'myapp/fontawesome-free-5.15.4-web/css/all.min.css' %}">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static 'myapp/js/form.js' %}"></script>
     <title>Document</title>
 </head>
 <body>
+  {% csrf_token %}
   <div class="info-aria">
     <div>
       <label for="sector" class="formbold-form-label"> Quelle est le Projet </label>
@@ -146,11 +148,17 @@
   </form>
   {% endif %}
   <hr>
+  <div class="act-handle">
   <div class="search-box">
     <button class="btn-search"><i class="fas fa-search"></i></button>
     <input id="searchInput" type="text" class="input-search" placeholder="Rerchecher ...">
   </div>
-
+  <div>
+    <div id="act-btn">
+  
+    </div>
+  </div>
+</div>
   <div>
     <table id="proj-table">
         <thead>
@@ -255,7 +263,7 @@
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
-            <td id="edi"><i class="fas fa-edit"></i></td>
+            <td ><button class="edi button-34" onclick="permission()"><i class="fas fa-edit"></button></i></td>
           </tr>
           <tr >
             <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>2</strong></td>
@@ -265,7 +273,7 @@
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
-            <td id="edi"><i class="fas fa-edit"></i></td>
+            <td ><button class="edi button-34" onclick="permission()"><i class="fas fa-edit"></button></i></td>
           </tr>
           <tr >
             <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>2</strong></td>
@@ -275,7 +283,7 @@
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
-            <td id="edi"><i class="fas fa-edit"></i></td>
+            <td ><button class="edi button-34" onclick="permission()"><i class="fas fa-edit"></button></i></td>
           </tr>
           <tr >
             <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>4</strong></td>
@@ -285,7 +293,7 @@
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
-            <td id="edi"><i class="fas fa-edit"></i></td>
+            <td ><button class="edi button-34" onclick="permission()"><i class="fas fa-edit"></button></i></td>
           </tr>         
           <tr >
             <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>5</strong></td>
@@ -295,7 +303,7 @@
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
-            <td id="edi"><i class="fas fa-edit"></i></td>
+            <td ><button class="edi button-34" onclick="permission()"><i class="fas fa-edit"></button></i></td>
           </tr>
           <tr >
             <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>6</strong></td>
@@ -305,7 +313,7 @@
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
-            <td id="edi"><i class="fas fa-edit"></i></td>
+            <td ><button class="edi button-34" onclick="permission()"><i class="fas fa-edit"></button></i></td>
           </tr>
           <tr >
             <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>7</strong></td>
@@ -315,7 +323,7 @@
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
-            <td id="edi"><i class="fas fa-edit"></i></td>
+            <td ><button class="edi button-34" onclick="permission()"><i class="fas fa-edit"></button></i></td>
           </tr>
           <tr >
             <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>8</strong></td>
@@ -325,7 +333,7 @@
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
-            <td id="edi"><i class="fas fa-edit"></i></td>
+            <td ><button class="edi button-34" onclick="permission()"><i class="fas fa-edit"></button></i></td>
           </tr>
           <tr >
             <td class="click-row" data-href="{% url 'app_view' 0 %}"><strong>9</strong></td>
@@ -335,7 +343,7 @@
             <td> 523 922 </td>
             <td>  616 078 </td>
             <td>  </td>
-            <td id="edi"><i class="fas fa-edit"></i></td>
+            <td ><button class="edi button-34" onclick="permission()"><i class="fas fa-edit"></button></i></td>
           </tr>
           {% for projet in list_projet %}
           <tr class="click-row" data-href="{% url 'app_view' projet.id_project%}">
@@ -346,7 +354,7 @@
           <td>{{ projet.dp_cum }} </td>
           <td>{{ projet.PEC }}</td>
           <td>{{ projet.dp_prev }}</td>
-          <td id="edi"><i class="fas fa-edit"></i></td>
+          <td ><button class="edi button-34" onclick="permission()"><i class="fas fa-edit"></button></i></td>
           </tr>
           {% endfor %}
         </tbody>
@@ -368,9 +376,14 @@
           const cells = rows.children('td');
                 // Loop through cells and log their contents
                 cells.each(function(index) {
-                    console.log(`cancel ${index}: ${$(this).val()}`);
-                    var valu=$(this).text();
+                    var input=$(this).children('input')
+                    console.log(`cancel ${index}: ${input.val()}`);
+                    var valu=input.val();
                     $(this).empty()
+                    $(this).text(valu)
+                    if( index == 7)
+                    $(this).html('<button class="edi button-34" onclick="permission()" ><i class="fas fa-edit"></button></i>')
+                    $('#act-btn').empty()
                   })
 
 }
@@ -391,16 +404,20 @@
       });
   });
 })
-  document.addEventListener("DOMContentLoaded", function() {
+
+
+ /* document.addEventListener("DOMContentLoaded", function() {
+  alert('edi exist'+$('#edi').length)
   const rowsedit = document.querySelectorAll("td#edi");
   rowsedit.forEach((cell,indexr) => {
     cell.addEventListener("click", function() {
           var rows=$('#proj-table tbody tr').eq(indexr); 
+          $('#cnl-btn').empty()
+          $('#act-btn').empty()
           const cells = rows.children('td');
                 // Loop through cells and log their contents
                 cells.each(function(index) {
-                    console.log(`Cell ${index}: ${$(this).text()}`);
-
+                    console.log(`Cell ${index}: ${$(this).text()}`)
                     var valu=$(this).text();
                     switch (true) {
                       case index == 0:
@@ -416,25 +433,105 @@
                           break;
                         case index == 7 :
                           console.log($(this).parent())
-                          $(this).attr('id', 'rowcancel');
-                        $(this).html('<button id="rowcancel'+indexr+'" onclick=cancel('+indexr+')><i class="fas fa-sign-out-alt"></i></button>')
+                        $(this).attr('id', 'rowcancel');
+                        $(this).empty();
+                        $('#cnl-btn').html('<button id="rowcancel'+indexr+'" onclick=cancel('+indexr+')><i class="fas fa-sign-out-alt"></i></button>')
+                        $('#act-btn').html('<button id="rowcancel'+indexr+'"><i class="fas fa-sign-out-alt"></i></button>')
                           break;
                       default:
                       $(this).html('<input class="td-edit" type="text" value="'+valu+'" id="editcell'+index+'"  />')
                         break;
                     }
                     /*if(index != 7)
-                    $(this).html('<input type="text" value="'+valu+'" id="editcell'+index+'" />')*/
+                    $(this).html('<input type="text" value="'+valu+'" id="editcell'+index+'" />')
                 });
                 
       });
   });
-});
-$(document).ready(function()  {
-  $('#rowcancel').on('click',function(){
-    alert('row cancel')
-  })
+});*/
+function permission(){
+$(document).ready(function(){
+  $('.edi').on('click',function()
+{
+  var list=new Array()
+  var row=$(this).closest('tr')
+  row.find("td").not(":last").each(function(index) {  
+            // Get the current text of the cell
+            var cellText = $(this).text();
+
+            // Replace the cell content with an input field containing the current text
+            switch (true) {
+                      case index == 0:
+                      $(this).html('<input type="text" value="'+cellText+'" id="editcell'+index+'" disabled />')
+                        break;
+                      case index == 3 || index == 4 || index == 5:
+                        var nowhite=cellText.replace(/\s+/g, '');
+                        var inte=parseInt(nowhite);
+                      $(this).html('<input class="td-edit"  type="number" step="0.01" name="PEC" value="'+inte+'" id="editcell'+index+'" />')
+                        break;
+                        case index == 6 :
+                        $(this).html('<input class="td-edit" type="text" value="'+cellText+'" id="editcell'+index+'" />')
+                          break;
+                          default:
+                      $(this).html('<input class="td-edit" type="text" value="'+cellText+'" id="editcell'+index+'"  />')
+                        break;
+            }
+        });
+        var indexss=row.index()
+        var parent=$(this).parent()
+        $(this).parent().empty();
+        parent.html('<button class="button-34" id="cnl-btn" onclick=cancel('+indexss+')><i class="fas fa-sign-out-alt"></i></button>')
+        $('#act-btn').html('<button class="button-34" id="sv-btn")><i class="far fa-check-circle"></i></button>')
+        $(document).on('click','#sv-btn',function()
+        {
+          row.find("td").not(":last").each(function(index) {  
+            // Get the current text of the cell
+            var cellText = $(this).text();
+              console.log(' cell '+index+' value '+$(this).find('input').val())
+              list.push($(this).find('input').val())
+            // Replace the cell content with an input field containing the current text
+        });
+        var formData = new FormData();
+
+        console.log(' form data lengh '+list.length+' value '+JSON.stringify(list))
+       
+         ;
+         /*
+         projet.Libelle }}</td>
+          <td>{{ projet.num_indiv }}</td>
+          <td>{{ projet.AP_Act }}</td>
+          <td>{{ projet.dp_cum }} </td>
+          <td>{{ projet.PEC }}</td>
+          <td>{{ projet.dp_prev 
+         **/
+          formData.append('id_projet',list[0])
+          formData.append('Libelle',list[1])
+          formData.append('num_indiv',list[2])
+          formData.append('AP_Act',list[3])
+          formData.append('dp_cum',list[4])
+          formData.append('PEC',list[5])
+          formData.append('dp_prev',list[6])
+          $.ajax({
+            url: '{% url "proj_update" %}',  // Replace with your Django view URL
+            type: 'POST',
+            data: formData,
+            processData: false,  // Prevent jQuery from automatically transforming the data into a query string
+            contentType: false,  // Prevent jQuery from overriding the Content-Type header
+            headers: {
+                'X-CSRFToken': getCookie('csrftoken') // Include CSRF token for security
+            },
+            success: function(response) {
+                console.log('Success:', response.message);
+                cancel(indexss)
+            },
+            error: function(xhr, status, error) {
+                console.log('Error:', error);
+            }
+        });
+          })
+        })
 })
+}
 $(document).ready(function(){
 	function sortTable(table, col, reverse) {
     var rows = table.find('tbody > tr').get();
