--- a/myapp/templates/myapp/insertion_op_table.html
+++ b/myapp/templates/myapp/insertion_op_table.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'myapp/css/main.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="{% static 'myapp/fontawesome-free-5.15.4-web/css/all.min.css' %}">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="{% static 'myapp/js/main.js' %}"></script>
@@ -464,7 +467,7 @@
             <td></td>
             <td ><button class="edi button-34" onclick="permissionOP()"><i class="fas fa-edit"></button></i></td>
           </tr>
-          {% for op in opr_list %}
+          {% for op in opr_pg %}
             <tr>
               <td><strong></strong></td>
              <td>{{ op.id_libelle_op}}</td>
@@ -491,7 +494,22 @@
           </tr>
         </tfoot>
       </table>
-      
+    </div>
+    <div class="pagination">
+      <span class="step-links">
+        {% if opr_pg.has_previous %}
+          <a href="?page=1">&laquo; first</a>
+          <a href="?page={{ opr_pg.previous_page_number }}">previous</a>
+        {% endif %}
+    
+        <span class="current">
+          Page {{ opr_pg.number }} of {{ opr_pg.paginator.num_pages }}.
+        </span>
+        {% if opr_pg.has_next %}
+          <a href="?page={{ opr_pg.next_page_number }}">next</a>
+          <a href="?page={{ opr_pg.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+      </span>
     </div>
 </body>
 <script type="text/javascript">
