--- a/myapp/templates/myapp/insertion_pr_table.html
+++ b/myapp/templates/myapp/insertion_pr_table.html
@@ -368,6 +368,24 @@
         </tfoot>
       </table>
     </div>
+    {% if list_prpg.num_pages > 0 %}
+    <div class="pagination">
+      <span class="step-links">
+        {% if list_prpg.has_previous %}
+          <a href="?page=1">&laquo; first</a>
+          <a href="?page={{ list_prpg.previous_page_number }}">previous</a>
+        {% endif %}
+    
+        <span class="current">
+          Page {{ list_prpg.number }} of {{ list_prpg.paginator.num_pages }}.
+        </span>
+        {% if list_prpg.has_next %}
+          <a href="?page={{ list_prpg.next_page_number }}">next</a>
+          <a href="?page={{ list_prpg.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+      </span>
+    </div>
+    {% endif %}
 </body>
 <script type="text/javascript">
   
